@@ -35,6 +35,7 @@
 #include "parsers/pngparser.hpp"
 #include "parsers/bzip2parser.hpp"
 #include "parsers/szddparser.hpp"
+#include "parsers/mscfparser.hpp"
 
 class Analyzer {
     uint64_t info;
