@@ -1,3 +1,8 @@
+v116
+    -Fix zlib parser.
+    -Update wav parser.
+    -Add mscf (MS Cab) parser.
+    -Change Analyzer.
 v115
     -Add tar, png, bzip2, szdd parser.
     -Tiff parser:
